# GroupNotesKeeperBot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: admin.py  buttons.py  exceptions.py  filters.py  functions.py  handlers.py  json_file.py  keyboards.py  states.py
bot/: config.py  main.py
bot/exceptions/: exceptions.py
bot/filters/: __init__.py  admin_filter.py  keyboard_access.py  main_admin_filter.py  message_access.py
bot/handlers/: __init__.py  admin.py  default.py  user.py
bot/keyboards/: keyboards.py
bot/states/: __init__.py  record_data.py  user_data.py
bot/utils/: __init__.py  bot_utils.py  json_utils.py
docs/: json_schema_v0.md  json_schema_v1.md
locales/en/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
migrations/: __init__.py  base.py  migrate_data.py  runner.py
migrations/versions/: __init__.py  v0001_v0_to_v1.py
src/: bootstrap.py  main.py
src/enums/: __init__.py  chat_types.py  command.py  confirm.py  manage.py  namespace.py  record.py  record_flow.py
src/errors/: __init__.py  admin.py  group.py  storage.py
src/models/: __init__.py  storage.py
src/repositories/: __init__.py  contracts.py
src/repositories/abstracts/: __init__.py  admin.py  group.py  record.py
src/repositories/json/: __init__.py  admin.py  file_store.py  group.py  record.py
src/settings/: __init__.py  logger.py  settings.py
src/storage/: __init__.py  storage.py
src/telegram/: __init__.py
src/use_cases/: __init__.py
(+47 files in other folders)
